WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314752
REGRESSION(
310826@main
): Confirming composition results in beep and initiates a search on google.com
https://bugs.webkit.org/show_bug.cgi?id=314752
Summary
REGRESSION(310826@main): Confirming composition results in beep and initiates...
Ryosuke Niwa
Reported
2026-05-13 13:35:35 PDT
Reproduction steps: 1. Enable Japanese Input method. 2. Open google.com on Saferi 3. Type “aaa” in Japanese Input mode, which produces blue-underlined “あああ”. 4. Hit Return key. Expected result: Candidates are confirmed Actual result: Google search initiates. <
rdar://176851109
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-05-13 15:16:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64874
EWS
Comment 2
2026-05-13 19:15:08 PDT
Committed
313212@main
(300105f8996d): <
https://commits.webkit.org/313212@main
> Reviewed commits have been landed. Closing PR #64874 and removing active labels.
EWS
Comment 3
2026-05-13 23:36:25 PDT
Committed
305413.899@safari-7624-branch
(164a52db8159): <
https://commits.webkit.org/305413.899@safari-7624-branch
> Reviewed commits have been landed. Closing PR #5275 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug